# scripts

./: .gitignore  CMakeLists.txt  README.md  build-repo.sh  build.sh  change-compiler.sh  check-compilers.sh  check-env.sh  clone-repos.sh  clone.sh  copy-cmake.sh  copy-template.sh  filename  generate-cmakelists.sh  generate-examples-flags.sh  generate-flags.sh  generate-libraries-flags.sh  install.sh  link-compilers.sh  link-flags.sh  p101-clone.sh  p101-install.sh  prepare-flags.py  pull.sh  repos.txt  setprompt  setpromt.sh  setup.sh  test-flags.py  test.c  test_src_XXXXXX.gcno  try-all-flags.sh  update-all.sh  update.sh  x.sh
flags/: address_sanitizer_flags.txt  analyzer_flags.txt  cfi_sanitizer_flags.txt  code_generation_flags.txt  dataflow_sanitizer_flags.txt  debug_flags.txt  hwaddress_sanitizer_flags.txt  instrumentation_compiler.txt  instrumentation_flags.txt  leak_sanitizer_flags.txt  memory_sanitizer_flags.txt  optimization_flags.txt  pointer_overflow_sanitizer_flags.txt  safe_stack_flags.txt  shadow_call_stack_flags.txt  thread_sanitizer_flags.txt  undefined_sanitizer_flags.txt  warning_flags.txt
